RESOLVED FIXED 202775
Flaky Test: media/media-source/media-source-page-cache.html
https://bugs.webkit.org/show_bug.cgi?id=202775
Summary Flaky Test: media/media-source/media-source-page-cache.html
WebKit Commit Bot
Reported 2019-10-09 16:38:47 PDT
This is an automatically generated bug from the commit-queue. media/media-source/media-source-page-cache.html has been flaky on the commit-queue. media/media-source/media-source-page-cache.html was authored by cdumez@apple.com. https://trac.webkit.org/browser/trunk/LayoutTests/media/media-source/media-source-page-cache.html The commit-queue just saw media/media-source/media-source-page-cache.html flake (text diff) while processing attachment 380576 [details] on bug 202765. Bot: webkit-cq-03 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.13.6 The bots will update this with information from each new failure. If you believe this bug to be fixed or invalid, feel free to close. The bots will re-open if the flake re-occurs. If you would like to track this test fix with another bug, please close this bug as a duplicate. The bots will follow the duplicate chain when making future comments.
Attachments
Archive of layout-test-results from webkit-cq-03 (4.05 MB, application/zip)
2019-10-09 16:38 PDT, WebKit Commit Bot
no flags
Archive of layout-test-results from webkit-cq-03 (3.84 MB, application/zip)
2019-10-10 01:45 PDT, WebKit Commit Bot
no flags
Patch (1.67 KB, patch)
2019-10-10 09:17 PDT, Chris Dumez
no flags
WebKit Commit Bot
Comment 1 2019-10-09 16:38:48 PDT
Created attachment 380585 [details] Archive of layout-test-results from webkit-cq-03
WebKit Commit Bot
Comment 2 2019-10-10 01:45:11 PDT
The commit-queue just saw media/media-source/media-source-page-cache.html flake (text diff) while processing attachment 380512 [details] on bug 202728. Bot: webkit-cq-03 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.13.6
WebKit Commit Bot
Comment 3 2019-10-10 01:45:13 PDT
Created attachment 380609 [details] Archive of layout-test-results from webkit-cq-03
Chris Dumez
Comment 4 2019-10-10 08:53:31 PDT
Flaky failure to enter the page cache it seems. I will try and reproduce locally to see what's preventing it.
Chris Dumez
Comment 5 2019-10-10 09:00:07 PDT
Hmm, no luck reproducing with: run-webkit-tests media/media-source/media-source-page-cache.html --repeat-each=100 -gf
Chris Dumez
Comment 6 2019-10-10 09:17:10 PDT
WebKit Commit Bot
Comment 7 2019-10-10 10:17:58 PDT
Comment on attachment 380650 [details] Patch Clearing flags on attachment: 380650 Committed r250976: <https://trac.webkit.org/changeset/250976>
WebKit Commit Bot
Comment 8 2019-10-10 10:18:00 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9 2019-10-10 10:18:17 PDT
Note You need to log in before you can comment on or make changes to this bug.