Flaky Test: media/media-source/media-source-page-cache.html https://bugs.webkit.org/show_bug.cgi?id=202775

Reviewed by Eric Carlson.

SourceBufferList should never prevent entering the page cache, even if it has
pending events in its queue. Its queue is a MainThreadGenericEventQueue, which
is Page Cache-aware and will properly suspend the firing of events when needed.

No new tests, covered by flaky test which should no longer be.

* Modules/mediasource/SourceBufferList.cpp:
(WebCore::SourceBufferList::canSuspendForDocumentSuspension const):


Canonical link: https://commits.webkit.org/216266@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250976 268f45cc-cd09-0410-ab3c-d52691b4dbfc